--- a/hopper.html
+++ b/hopper.html
@@ -39,6 +39,9 @@
             <li><a href="#">Contact</a></li>
           </ul>
         </nav>
+        <button class="header-nav__search-button" aria-label="Toggle Search Form">
+          <img src="images/search.svg" alt="Toggle Search Form">
+        </button>
         <nav class="secondary-nav">
           <ul>
             <li><a class="button--primary" href="#">Sign Up</a></li>
