--- a/hopper.html
+++ b/hopper.html
@@ -10,56 +10,63 @@
 </head>
 <body>
 
+  <!-- Header (at wide widths) has height specified so content will not jump -->
   <header class="site-header">
-    <div class="site-header__inner fixable">
+
+    <!-- Gets fixed by JS at wide widths -->
+    <div class="site-header__fixable fixable">
       <div class="header__left">
         <button class="nav-primary__button" aria-label="Toggle navigation">
           <span class="nav-primary__icon"></span>
         </button>
       </div>
-      <div class="container">
-        <div class="grid-full">
-          <div class="site-branding">
-            <div class="site-branding__inner">
-              <a href="">drupal</a>
+
+      <!-- Needs to extend full width -->
+      <div class="site-header__inner">
+        <div class="container">
+          <div class="grid-full">
+            <div class="site-branding">
+              <div class="site-branding__inner">
+                <a href="">drupal</a>
+              </div>
             </div>
-          </div>
-          <button class="header-nav__button">
-            <div class="header-nav__icon"></div>
-          </button>
-          <div class="header-nav">
-            <div class="search-wrapper">
-              <form action="">
-                <input type="search" placeholder="Search by keyword or phrase.">
-              </form>
-            </div>
-            <nav class="primary-nav">
-              <ul>
-                <li><a href="#">Home</a></li>
-                <li>
-                  <a href="#">Products</a>
-                  <ul>
-                    <li><a href="#">Black & White Photos</a></li>
-                    <li><a href="#">Stone Statues</a></li>
-                    <li><a href="#">Antiques & Artifacts</a></li>
-                    <li><a href="#">Replicas</a></li>
-                  </ul>
-                </li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Contact</a></li>
-              </ul>
-            </nav>
-            <div class="secondary-nav__wrapper">
-              <button class="header-nav__search-button" aria-label="Toggle Search Form">
-                <img src="images/search.svg" alt="Toggle Search Form">
-              </button>
-              <nav class="secondary-nav">
+            <button class="header-nav__button">
+              <div class="header-nav__icon"></div>
+            </button>
+            <div class="header-nav">
+              <div class="search-wrapper">
+                <form action="">
+                  <input type="search" placeholder="Search by keyword or phrase.">
+                </form>
+              </div>
+              <nav class="primary-nav">
                 <ul>
-                  <li><a class="button--primary" href="#">Sign Up</a></li>
-                  <li><a href="#">Login</a></li>
+                  <li><a href="#">Home</a></li>
+                  <li>
+                    <a href="#">Products</a>
+                    <ul>
+                      <li><a href="#">Black & White Photos</a></li>
+                      <li><a href="#">Stone Statues</a></li>
+                      <li><a href="#">Antiques & Artifacts</a></li>
+                      <li><a href="#">Replicas</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#">About</a></li>
+                  <li><a href="#">Blog</a></li>
+                  <li><a href="#">Contact</a></li>
                 </ul>
               </nav>
+              <div class="secondary-nav__wrapper">
+                <button class="header-nav__search-button" aria-label="Toggle Search Form">
+                  <img src="images/search.svg" alt="Toggle Search Form">
+                </button>
+                <nav class="secondary-nav">
+                  <ul>
+                    <li><a class="button--primary" href="#">Sign Up</a></li>
+                    <li><a href="#">Login</a></li>
+                  </ul>
+                </nav>
+              </div>
             </div>
           </div>
         </div>
