Accessible label in menu toggle.

--- a/hopper.html
+++ b/hopper.html
@@ -21,7 +21,7 @@
         </button>
       </div>
 
-      <!-- Needs to extend full width -->
+      <!-- Needs to extend full width so box shadow will also extend -->
       <div class="site-header__inner">
         <div class="container">
           <div class="grid-full">
@@ -30,8 +30,9 @@
                 <a href="">drupal</a>
               </div>
             </div>
-            <button class="header-nav__button">
-              <div class="header-nav__icon"></div>
+            <button class="mobile-nav__button">
+              <div class="mobile-nav__label">Menu</div>
+              <div class="mobile-nav__icon"></div>
             </button>
             <div class="header-nav">
               <div class="search-wrapper">
@@ -73,6 +74,10 @@
       </div>
     </div>
   </header>
+
+
+
+
   <div class="content">
     <main class="container">
       <div class="grid-full">
