--- a/hopper.html
+++ b/hopper.html
@@ -30,10 +30,16 @@
                 <a href="">drupal</a>
               </div>
             </div>
-            <button class="mobile-nav__button">
-              <div class="mobile-nav__label">Menu</div>
-              <div class="mobile-nav__icon"></div>
-            </button>
+            <div class="mobile-buttons">
+              <button class="mobile-search-button" aria-label="Toggle Search Form">
+                <img src="images/search.svg" alt="Toggle Search Form">
+              </button>
+              <div class="mobile-buttons__divider"></div>
+              <button class="mobile-nav-button">
+                <div class="mobile-nav-button__label">Menu</div>
+                <div class="mobile-nav-button__icon"></div>
+              </button>
+            </div>
             <div class="header-nav">
               <div class="search-wrapper">
                 <form action="">
