--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <aside class="social-container">
       <div class="social-container__inner fixable">
         <div class="rotate">
-          <span class="social-label">RSS Feed</span>
+          <span aria-hidden="true" class="social-label">RSS Feed</span>
           <img src="images/rss.svg" alt="RSS">
         </div>
       </div>
