Dropdown menus at wide.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Olivero Navigation Proof of Concept</title>
   <link rel="stylesheet" href="dist/style.css">
   <script defer src="dist/scripts.js"></script>
+  <script defer src="dist/navigation.js"></script>
 </head>
 <body>
 
@@ -47,11 +48,11 @@
                 </form>
               </div>
               <nav class="primary-nav">
-                <ul>
+                <ul class="primary-nav--level-1">
                   <li><a href="#">Home</a></li>
                   <li>
                     <a href="#">Products</a>
-                    <ul>
+                    <ul class="primary-nav--level-2">
                       <li><a href="#">Black & White Photos</a></li>
                       <li><a href="#">Stone Statues</a></li>
                       <li><a href="#">Antiques & Artifacts</a></li>
