Work on mobile nav.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               <nav class="primary-nav">
                 <ul class="primary-nav--level-1">
                   <li><a href="#">Home</a></li>
-                  <li>
+                  <li class="has-children">
                     <a href="#">Products</a>
                     <ul class="primary-nav--level-2">
                       <li><a href="#">Black & White Photos</a></li>
