Work on mobile second level nav.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="dist/style.css">
   <script defer src="dist/scripts.js"></script>
   <script defer src="dist/navigation.js"></script>
+  <script defer src="dist/second-level-navigation.js"></script>
 </head>
 <body>
 
