Ensure that growing underlines only span width of text within primary nav.

--- a/index.html
+++ b/index.html
@@ -50,19 +50,19 @@
               </div>
               <nav class="primary-nav">
                 <ul class="primary-nav--level-1">
-                  <li><a href="#">Home</a></li>
+                  <li><a href="#"><span>Home</span></a></li>
                   <li class="has-children">
-                    <a href="#">Products</a>
+                    <a href="#"><span>Products</span></a>
                     <ul class="primary-nav--level-2">
-                      <li><a href="#">Black & White Photos</a></li>
-                      <li><a href="#">Stone Statues</a></li>
-                      <li><a href="#">Antiques & Artifacts</a></li>
-                      <li><a href="#">Replicas</a></li>
+                      <li><a href="#"><span>Black & White Photos</span></a></li>
+                      <li><a href="#"><span>Stone Statues</span></a></li>
+                      <li><a href="#"><span>Antiques & Artifacts</span></a></li>
+                      <li><a href="#"><span>Replicas</span></a></li>
                     </ul>
                   </li>
-                  <li><a href="#">About</a></li>
-                  <li><a href="#">Blog</a></li>
-                  <li><a href="#">Contact</a></li>
+                  <li><a href="#"><span>About</span></a></li>
+                  <li><a href="#"><span>Blog</span></a></li>
+                  <li><a href="#"><span>Contact</span></a></li>
                 </ul>
               </nav>
               <div class="secondary-nav__wrapper">
