--- a/index.html
+++ b/index.html
@@ -84,15 +84,26 @@
   </header>
 
 
-
-
   <div class="content">
     <main class="container">
       <div class="grid-full">
-        <div class="text-content">
+        <div class="hero">
+          <div class="breadcrumb">
+            <ul>
+              <li><a href="#">Drupal</a></li>
+            </ul>
+          </div>
           <h1>Welcome to Your Brand New Drupal 9 Site</h1>
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Est numquam tempora consequatur, fugit, facere exercitationem neque impedit quidem fugiat quos nemo magni rerum, aperiam nostrum quisquam non eligendi eius commodi.</p>
+          <div class="byline">
+            By <a href="#">Matthew Tift</a>, <span class="byline__date">16 October, 2009</span>
+          </div>
           <img src="images/drupal-mountain.jpg" alt="Snowy Mountain">
+        </div>
+        <div class="text-content">
+          <p class="lead">If you thought opening paragraphs were amazing, wait till you begin writing blog
+          posts with leads! They’ll blow your mind. They draw your readers into an
+          article.</p>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Est numquam tempora consequatur, fugit, facere exercitationem neque impedit quidem fugiat quos nemo magni rerum, aperiam nostrum quisquam non eligendi eius commodi.</p>
           <p>Delectus, doloremque deserunt saepe incidunt, molestias excepturi neque distinctio quos deleniti cum maxime doloribus in dolor exercitationem autem voluptatem quo vero aliquid quia. Enim quidem earum consectetur at, sed placeat?</p>
           <p>Nostrum magni ipsa illo quae! Dolores laborum vel sapiente doloremque perspiciatis ab provident voluptas obcaecati ullam, fuga exercitationem laboriosam ad dolor animi totam nesciunt explicabo est natus iure. Aliquid, qui?</p>
           <p>Incidunt sint eos perferendis rerum officiis reiciendis veritatis deleniti nisi et reprehenderit. Expedita, exercitationem! Animi temporibus laudantium sed dolorem. Itaque dignissimos animi natus. Praesentium dolor culpa corporis, qui blanditiis impedit!</p>
