Adding pull image.

--- a/index.html
+++ b/index.html
@@ -96,17 +96,20 @@
           </div>
           <h1>Welcome to Your Brand New Drupal 9 Site</h1>
           <div class="byline">
-            By <a href="#">Matthew Tift</a>, <span class="byline__date">16 October, 2009</span>
+            By <a href="#">Matthew Tift</a>, <span class="byline__date">16 October, 2019</span>
           </div>
-          <img src="images/drupal-mountain.jpg" alt="Snowy Mountain">
+          <img src="/images/hero.jpg" alt="Desktop with two computers showing Olivero design">
         </div>
         <div class="text-content">
-          <p class="lead">If you thought opening paragraphs were amazing, wait till you begin writing blog
-          posts with leads! They’ll blow your mind. They draw your readers into an
-          article.</p>
+          <p class="lead">If you thought opening paragraphs were amazing, wait till you begin writing blog posts with leads! They’ll blow your mind. They draw your readers into an article.</p>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Est numquam tempora consequatur, fugit, facere exercitationem neque impedit quidem fugiat quos nemo magni rerum, aperiam nostrum quisquam non eligendi eius commodi.</p>
+          <h2>Subheadings are the best!</h2>
           <p>Delectus, doloremque deserunt saepe incidunt, molestias excepturi neque distinctio quos deleniti cum maxime doloribus in dolor exercitationem autem voluptatem quo vero aliquid quia. Enim quidem earum consectetur at, sed placeat?</p>
           <p>Nostrum magni ipsa illo quae! Dolores laborum vel sapiente doloremque perspiciatis ab provident voluptas obcaecati ullam, fuga exercitationem laboriosam ad dolor animi totam nesciunt explicabo est natus iure. Aliquid, qui?</p>
+          <figure class="pull-right">
+            <img src="/images/pull-1.jpg" alt="DrupalCon Vienna Group Photo">
+            <figcaption>DrupalCon Vienna group photo. This photo was taken by Dominik Kiss on behalf of the Drupal Assocation.</figcaption>
+          </figure>
           <p>Incidunt sint eos perferendis rerum officiis reiciendis veritatis deleniti nisi et reprehenderit. Expedita, exercitationem! Animi temporibus laudantium sed dolorem. Itaque dignissimos animi natus. Praesentium dolor culpa corporis, qui blanditiis impedit!</p>
           <p>Dicta dolores nisi tenetur eos non. Hic recusandae repellendus provident sequi vel necessitatibus, quidem autem unde consectetur quas illo possimus cupiditate veniam commodi. Quo ut amet, nisi reprehenderit asperiores vel!</p>
           <p>Deleniti dignissimos tempore vero doloribus laboriosam itaque sint nam, eveniet veritatis non, illo fuga ipsam quaerat dolore. Quidem consectetur expedita iste aliquam laboriosam maxime laborum sunt. Ullam veritatis accusamus quidem?</p>
