More minor tweaks.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Olivero Proof of Concept</title>
+  <link rel="preload" href="/fonts/metropolis/Metropolis-Regular.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="/fonts/metropolis/Metropolis-Bold.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="stylesheet" href="dist/style.css">
   <script defer src="dist/scripts.js"></script>
   <script defer src="dist/navigation.js"></script>
