More work on IE.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="preload" href="/fonts/metropolis/Metropolis-Regular.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="/fonts/metropolis/Metropolis-Bold.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="stylesheet" href="dist/style.css">
+  <script defer src="dist/polyfills.js"></script>
   <script defer src="dist/scripts.js"></script>
   <script defer src="dist/navigation.js"></script>
   <script defer src="dist/second-level-navigation.js"></script>
