--- a/index.html
+++ b/index.html
@@ -150,6 +150,18 @@
         </div>
       </aside>
     </div>
+
+    <footer class="site-footer">
+      <div class="site-footer__inner">
+        <div class="container">
+          <div class="grid-full">
+            <div class="powered-by">
+              Powered by <a href="#">Drupal</a> <img src="/images/footer-drupal.svg" alt="Drupal logo">
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
     <div class="overlay"></div>
   </div>
 </body>
