--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <body>
 
   <div class="page-wrapper">
+    <a href="#main-content" class="skip-link visually-hidden focusable">Skip to main content</a>
   <!-- Header (at wide widths) has height specified so content will not jump -->
     <header class="site-header">
 
@@ -90,6 +91,7 @@
 
     <div class="content">
       <main class="container">
+        <a class="visually-hidden" id="main-content" tabindex="-1"></a>
         <div class="grid-full">
           <div class="hero">
             <div class="breadcrumb">
