Use aria-controls attributes for navigations.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                   <div class="mobile-nav-button__icon"></div>
                 </button>
               </div>
-              <div class="header-nav">
+              <div id="header-nav" class="header-nav">
                 <div class="search-wrapper">
                   <form role="search" action="">
                     <label class="visually-hidden" for="search-input">Search</label>
