More work on adjusting content and hero grid.

--- a/index.html
+++ b/index.html
@@ -93,18 +93,28 @@
       <main class="container">
         <a class="visually-hidden" id="main-content" tabindex="-1"></a>
         <div class="grid-full">
-          <div class="hero">
-            <div class="breadcrumb">
-              <ul>
-                <li><a href="#">Drupal</a></li>
-              </ul>
-            </div>
-            <h1>Welcome to Your Brand New Drupal 9 Site</h1>
-            <div class="byline">
-              By <a href="#">Matthew Tift</a>, <span class="byline__date">16 October, 2019</span>
-            </div>
-            <img src="/images/hero.jpg" alt="Desktop with two computers showing Olivero design">
+          <div class="breadcrumb">
+            <ul>
+              <li><a href="#">Drupal</a></li>
+            </ul>
           </div>
+        </div>
+        <div class="hero">
+          <div class="grid-full">
+            <div class="hero__content">
+              <h1>Welcome to Your Brand New Drupal 9 Site</h1>
+              <div class="hero__byline">
+                By <a href="#">Matthew Tift</a>, <span class="byline__date">16 October, 2019</span>
+              </div>
+            </div>
+          </div>
+          <div class="grid-full">
+            <div class="hero__img">
+              <img src="/images/hero.jpg" alt="Desktop with two computers showing Olivero design">
+            </div>
+          </div>
+        </div>
+        <div class="grid-full">
           <div class="text-content">
             <p class="lead">If you thought opening paragraphs were amazing, wait till you begin writing blog posts with leads! They’ll blow your mind. They draw your readers into an article.</p>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Est numquam tempora consequatur, fugit, facere exercitationem neque impedit quidem fugiat quos nemo magni rerum, aperiam nostrum quisquam non eligendi eius commodi.</p>
