--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <title>Olivero Proof of Concept</title>
   <link rel="preload" href="/fonts/metropolis/Metropolis-Regular.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="/fonts/metropolis/Metropolis-Bold.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="/fonts/lora/lora-v14-latin-regular.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="/fonts/lora/lora-v14-latin-italic.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="/fonts/lora/lora-v14-latin-700.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="stylesheet" href="dist/style.css">
   <script defer src="dist/polyfills.js"></script>
   <script defer src="dist/scripts.js"></script>
