--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <div class="hero">
           <div class="grid-full">
             <div class="hero__content">
-              <h1>Welcome to Your Brand New Drupal 9 Site</h1>
+              <h1>Drupal 9: The Most Beautiful CMS Ever!</h1>
               <div class="hero__byline">
                 By <a href="#">Matthew Tift</a>, <span class="byline__date">16 October, 2019</span>
               </div>
