Rename heading site branding.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="grid-full">
               <div class="site-branding">
                 <div class="site-branding__inner">
-                  <a href="">drupal</a>
+                  <a href="">olivero</a>
                 </div>
               </div>
               <div class="mobile-buttons">
