Misc layout fixes.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <script defer src="dist/second-level-navigation.js"></script>
 </head>
 <body>
+<!-- <img class="mock" src="/mock.jpg" alt=""> -->
 
   <div class="page-wrapper">
     <a href="#main-content" class="skip-link visually-hidden focusable">Skip to main content</a>
