Remove extra hyperlinks. Rename to index.

--- a/issue/index.html
+++ b/issue/index.html
@@ -29,10 +29,7 @@
   <p>This new frontend theme will have a modern look and feel based on adjectives
     and principles that were identified during the design process (more on this
     below). It will be <a
-      href="https://www.w3.org/WAI/standards-guidelines/wcag">WCAG</a> <a
-      href="https://www.w3.org/WAI/standards-guidelines/wcag">AA</a> <a
-      href="https://www.w3.org/WAI/standards-guidelines/wcag">compliant</a><a
-      href="https://www.w3.org/WAI/standards-guidelines/wcag">,</a> support
+      href="https://www.w3.org/WAI/standards-guidelines/wcag">WCAG AA compliant</a>, support
     updated functionality in Drupal, and is intended to feel modern going into the
     future. The theme is named “Olivero” after <a
       href="https://www.drupal.org/forum/general/community-spotlight/2019-02-22/remembering-rachel-olivero">Rachel
