--- a/issue/index.html
+++ b/issue/index.html
@@ -10,10 +10,20 @@
     body {
       max-width: 620px;
       margin: 20px auto;
+      font-family: "Lucida Grande","DejaVu Sans","Bitstream Vera Sans",Verdana,Arial,sans-serif;
+      color: #222222;
     }
 
     img {
       max-width: 100%;
+    }
+
+    h3 {
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-weight: bold;
+    font-size: 1.231em;
+    line-height: 1.6875em;
+    margin: 0 0 0.5625em;
     }
   </style>
 </head>
@@ -111,7 +121,7 @@
     were clearly one adjective or the other (“Formal” not “Casual”) while others
     highlight the importance of a balance (“Approachable” and “Official”).</p>
 
-  <p><img src="olivero__sliding-scale.jpg" alt="Sliding Scale Survey" /></p>
+  <p><img src="olivero__sliding-scale.jpg" alt="Sliding Scale Survey showing various terms (Formal, casual) with dots placed between them." /></p>
 
   <h3 id="voiceandtoneofolivero">Voice and tone of Olivero</h3>
 
@@ -169,7 +179,7 @@
     These were then presented to the stakeholders, who choose a design to move
     forward with.</p>
 
-  <p><img src="olivero__3-choices.jpg" alt="3 designs for the new theme" /></p>
+  <p><img src="olivero__3-choices.jpg" alt="3 designs for the new theme. Left one is more traditional, center is 😍, and the right one is kinda weird." /></p>
 
   <p>The chosen design was iterated upon, and once again brought in front of the
     stakeholders, who then provided additional feedback.</p>
@@ -198,7 +208,7 @@
   <p>What follows are the rules and guidelines that define the responsive grid for
     the design system.</p>
 
-  <p><img src="olivero__grid.jpg" alt="Theme design with grid overlayed" /></p>
+  <p><img src="olivero__grid.jpg" alt="Theme design with a uniform grid overlayed" /></p>
 
   <h3 id="verticalrhythm">Vertical Rhythm</h3>
 
