--- a/issue/index.html
+++ b/issue/index.html
@@ -475,19 +475,18 @@
   <h2 id="links">Links</h2>
 
   <ul>
-    <li>Olivero theme project page: https://www.drupal.org/project/olivero</li>
+    <li>Olivero theme project page: <a href="https://www.drupal.org/project/olivero">https://www.drupal.org/project/olivero</a></li>
 
     <li>Figma design:
-      https://www.figma.com/proto/x5zBLbvoW1jsvyAOt4Gp9I/Olivero-Theme-Public</li>
+      <a href="https://www.figma.com/proto/x5zBLbvoW1jsvyAOt4Gp9I/Olivero-Theme-Public">https://www.figma.com/proto/x5zBLbvoW1jsvyAOt4Gp9I/Olivero-Theme-Public</a></li>
 
-    <li>Proof of concept page: https://olivero-poc.netlify.com</li>
+    <li>Proof of concept page: <a href="https://olivero-poc.netlify.com">https://olivero-poc.netlify.com</a></li>
 
     <li>Drupal ideas issue to create new default front-end theme:
-      https://www.drupal.org/project/ideas/issues/3064880</li>
+      <a href="https://www.drupal.org/project/ideas/issues/3064880">https://www.drupal.org/project/ideas/issues/3064880</a></li>
 
     <li>Community Spotlight on Rachel Olivero:
-      https://www.drupal.org/forum/general/community-spotlight/2019-02-22/remembering-rachel-olivero
-    </li>
+      <a href="https://www.drupal.org/forum/general/community-spotlight/2019-02-22/remembering-rachel-olivero">https://www.drupal.org/forum/general/community-spotlight/2019-02-22/remembering-rachel-olivero</a></li>
   </ul>
 
 </body>
