Remove dup link.

--- a/issue/index.html
+++ b/issue/index.html
@@ -70,8 +70,7 @@
     <li><strong>WCAG AA Compliance:</strong> The theme will be WCAG AA compliant.
       We will be working closely with accessibility experts and the Drupal
       Accessibility team to ensure that the theme passes <a
-        href="https://www.drupal.org/node/464500">Drupal’s stringent</a> <a
-        href="https://www.drupal.org/node/464500">accessibility standards</a> with
+        href="https://www.drupal.org/node/464500">Drupal’s stringent accessibility standards</a> with
       flying colors.</li>
   </ul>
 
