--- a/issue/index.html
+++ b/issue/index.html
@@ -403,8 +403,8 @@
     from the Drupal accessibility team, which will hopefully alleviate last minute
     time-crunches when the patch is submitted to Drupal core.</p>
 
-  <p>The proof of concept is at https://olivero-poc.netlify.com, and the git
-    repository for this is at https://github.com/Lullabot/olivero-poc.</p>
+  <p>The proof of concept is at <a href="https://olivero-poc.netlify.com">https://olivero-poc.netlify.com</a>, and the git
+    repository for this is at <a href="https://github.com/Lullabot/olivero-poc">https://github.com/Lullabot/olivero-poc</a>.</p>
 
   <h2 id="themename">Theme Name</h2>
 
